--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 data access.</p>
         </div>
         <div class="feature">
-            <h3>Cross Platform</h3>
+            <h3>Cross-Platform Compatibility</h3>
             <p>It works seamlessly on platforms like Windows, macOS, and Linux.This compatibility allows users on
                 various PC setups to access the browser's features.
             </p>
