--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
             <li><a href="https://twitter.com/mr_freddy59" target="_blank">Alfred Nti - Twitter</a></li>
             <!-- Repeat for other team members -->
         </ul>
+        <hr />
+        <ul>
+            <li><a href="https://linkedin.com/in/euniceamable" target="_blank">Eunice Amable - LinkedIn</a></li>
+            <li><a href="https://github.com/Eunice-serani" target="_blank">Eunice Amable - GitHub</a></li>
+            <li><a href="https://twitter.com/euniceamable" target="_blank">Eunice Amable - Twitter</a></li>
+            <!-- Repeat for other team members -->
+        </ul>
         <a href="https://github.com/Freddywhest/flux-browser" class="button">View Repository</a>
     </section>
 
